--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@transform-string/tsconfig",
+  "name": "@format-string/tsconfig",
   "version": "0.0.3",
   "private": true,
   "license": "MIT",
