--- a/packages/cnpj/package.json
+++ b/packages/cnpj/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@format-string/remove",
+  "name": "@format-string/cnpj",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
