--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@format-string/core",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -8,16 +8,19 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "tsc --declaration",
     "clean": "rm -rf dist",
-    "dev": "tsc -w",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
     "lint": "eslint \"src/**/*.ts*\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "@format-string/remove": "*",
-    "@format-string/eslint-config": "*",
     "@format-string/tsconfig": "*",
+    "@format-string/eslint-config": "*",
+    "@format-string/remove": "*",
+    "@format-string/cnpj": "*",
+    "@format-string/cpf": "*",
+    "eslint": "^7.32.0",
+    "tsup": "^6.7.0",
     "typescript": "^4.5.3"
   }
 }
