--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@format-string/core",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -18,7 +18,17 @@
     "@format-string/eslint-config": "*",
     "@format-string/remove": "*",
     "@format-string/cnpj": "*",
+    "@format-string/rg": "*",
     "@format-string/cpf": "*",
+    "@format-string/cred-card-expiration-date": "*",
+    "@format-string/cred-card": "*",
+    "@format-string/currency": "*",
+    "@format-string/obscure-email": "*",
+    "@format-string/postal-code": "*",
+    "@format-string/number": "*",
+    "@format-string/phone": "*",
+    "@format-string/telephone": "*",
+    "@format-string/single-document": "*",
     "eslint": "^7.32.0",
     "tsup": "^6.7.0",
     "typescript": "^4.5.3"
