--- a/packages/cnpj/package.json
+++ b/packages/cnpj/package.json
@@ -1,4 +1,5 @@
 {
+  "repository": "https://github.com/ReisSouza/format-string",
   "name": "@format-string/cnpj",
   "version": "1.0.1",
   "main": "./dist/index.js",
