--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,4 +1,5 @@
 {
+  "repository": "https://github.com/ReisSouza/format-string",
   "name": "@format-string/core",
   "version": "0.2.1",
   "main": "./dist/index.js",
