--- a/packages/remove/package.json
+++ b/packages/remove/package.json
@@ -1,4 +1,5 @@
 {
+  "repository": "https://github.com/ReisSouza/format-string",
   "name": "@format-string/remove",
   "version": "0.1.1",
   "main": "./dist/index.js",
