--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 auto-install-peers = true
 node-linker=hoisted
-@format-string:registry=https://npm.pkg.github.com
+# @format-string:registry=https://npm.pkg.github.com
