--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules"
   },
-  "dependencies": {},
+  "dependencies": {
+    "next": "^13.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.0.4"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "turbo": "latest"
