--- a/packages/SinglePhone/package.json
+++ b/packages/SinglePhone/package.json
@@ -1,7 +1,7 @@
 {
   "repository": "https://github.com/ReisSouza/format-string",
-  "name": "@format-string/cpf",
-  "version": "1.1.2",
+  "name": "@format-string/single-phone",
+  "version": "0.0.0",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -16,7 +16,9 @@
     "lint": "eslint \"src/**/*.ts*\""
   },
   "devDependencies": {
+    "@format-string/cpf": "*",
     "@format-string/eslint-config": "*",
+    "@format-string/cnpj": "*",
     "@format-string/tsconfig": "*",
     "eslint": "^7.32.0",
     "typescript": "^4.5.3",
