--- a/packages/remove/package.json
+++ b/packages/remove/package.json
@@ -1,7 +1,7 @@
 {
   "repository": "https://github.com/ReisSouza/format-string",
   "name": "@format-string/remove",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -19,7 +19,8 @@
     "@format-string/eslint-config": "*",
     "@format-string/tsconfig": "*",
     "eslint": "^7.32.0",
-    "typescript": "^4.5.3",
-    "tsup": "^6.7.0"
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.7",
+    "typescript": "^4.5.3"
   }
 }
