--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@format-string/utils",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -14,10 +14,11 @@
     "lint": "eslint \"src/**/*.ts*\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "@format-string/remove": "*",
     "@format-string/eslint-config": "*",
+    "@format-string/remove": "*",
     "@format-string/tsconfig": "*",
+    "eslint": "^7.32.0",
+    "tsx": "^3.12.7",
     "typescript": "^4.5.3"
   }
 }
