--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": false
     },
     "clean": {
       "cache": false
