fix: :white_check_mark:

--- a/turbo.json
+++ b/turbo.json
@@ -4,9 +4,8 @@
   "globalEnv": ["PORT"],
   "pipeline": {
     "build": {
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**", "public/dist/**"],
-      "dependsOn": ["^build"],
-      "env": ["NEXT_PUBLIC_API_HOST"]
+      "outputs": ["dist/**", "public/dist/**"],
+      "dependsOn": ["^build"]
     },
     "lint": {
       "dependsOn": ["^build"]
