--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "version-packages": "changeset version",
     "release": "turbo run build && changeset publish",
     "lint": "turbo run lint",
-    "clean": "turbo run clean && rm -rf node_modules"
-  },
-  "dependencies": {
-    "next": "^13.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.0.4"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "vitest": "^0.30.1"
   },
   "engines": {
     "node": ">=14.0.0",
