--- a/packages/cpf/package.json
+++ b/packages/cpf/package.json
@@ -13,7 +13,8 @@
     "clean": "rm -rf dist",
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsx watch src/index.ts --format esm,cjs --dts",
-    "lint": "eslint \"src/**/*.ts*\""
+    "lint": "eslint \"src/**/*.ts*\"",
+    "test": "vitest"
   },
   "devDependencies": {
     "@format-string/eslint-config": "*",
@@ -21,6 +22,10 @@
     "eslint": "^7.32.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "vite": "^4.3.4"
+  },
+  "dependencies": {
+    "vitest": "^0.30.1"
   }
 }
